--- a/terraform/1/docker-compose.yml
+++ b/terraform/1/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 services:
     PS:
         image: prestashop/prestashop
-        #volumes:
+        volumes:
         - ./data:/var/www/html
         ports:
         - "8081:80"
